--- a/program-guide/WebContent/css/stelinno.css
+++ b/program-guide/WebContent/css/stelinno.css
@@ -1,11 +1,33 @@
 @font-face { font-family: sf-san-francisco; src: url('../fonts/sf-san-francisco-ui-display-regular.otf'); }
+@font-face { font-family: alien-resurrection; src: url('../fonts/alien-resurrection.ttf'); }
 
-* {
-	font-family: sf-san-francisco;	
+html {
+	height: 100%;
+	width: 100%;
+	margin: 0px 0px 0px 0px;
+	margin-top: 10px;
+	
+	font-family: sf-san-francisco;
+	color: #ffffff;
 }
 
 body {
-	font-size: 11pt;
+	font-size: 16pt;
+	background-image: url('/images/blue-space-bg.jpg');
+	background-repeat: no-repeat;	
+	background-position: top center;
+	/*background-attachment: fixed;*/
+	
+	/*background-size: cover;*/
+	/*text-align: center;*/
+	width: 1500px;
+	height: 100%;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	margin-left:auto;
+	margin-right:auto;
+	/*border: solid 4px red;*/
+	/*overflow:hidden;*/
 }
 
 h1 {
@@ -15,7 +37,7 @@ h1 {
 }
 
 h2 {
-	font-size: 10pt;
+	font-size: 15pt;
 	margin: 0px;
 	padding: 0px;
 }
@@ -36,6 +58,53 @@ button {
 	width: 120px;
 }
 
+#header {
+	position: relative;
+	height: 110px;
+	width: 1500px;
+}
+
+#content {
+	position: relative;
+	margin-left: 24px;
+	margin-top: 30px;
+	width: 1500px;
+	/*border: solid 3px red;*/
+	height: 800px;
+	color: black;
+}
+
+#footer {
+	position: absolute; top: 1030px; text-align: center; width: 1500px;
+}
+
+#footer hr{
+	border-color: #001237;
+}
+
+#footer a {
+	color: #001237;
+	font-family: alien-resurrection;
+	font-size: 14pt;
+}
+
 .toolTipInputField {
 	margin-top: 18px;	
+}
+
+.menuItem {
+	color: #4a7db9;
+	text-decoration: none;
+}
+
+.menuItemSelected {
+	color: #ffffff;
+	font-style: bold;
+	text-decoration: none;
+}
+
+img.stelinno-logo {
+	margin-top: 24px; 
+	margin-left: 0px;
+	width: 80px;
 }
